# melcloud_client

./: README.md  client.py  pyproject.toml
examples/: melcloud_to_influxdb.py
src/melcloud_client/: __init__.py  client.py  device.py
