[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "melcloud_client"
version = "0.0.1"
authors = [
  { name="", email="niqi17@gmail.com" },
]
description = "MELCloud Client"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests"
]